# ChessMate

./: .gitignore  CMakeLists.txt  CMakeSettings.json
ChessMate/: CMakeLists.txt  ChessMate.cpp  ChessMate.h
ChessMate/BasicUtils/: Matrix.h  StringHelper.h
ChessMate/ChessEngine/: Board.cpp  Board.h  CMakeLists.txt  ChessTypes.cpp  ChessTypes.h  Figure.cpp  Figure.h  Movement.cpp  Movement.h
ChessMate/ChessGui/: CMakeLists.txt  ChessGui.cpp
ChessMate/ChessGui/ui/: ChessField.cpp  ChessField.h  ChessFigure.cpp  ChessFigure.h  ChessWindow.cpp  ChessWindow.h  ChessWindow.ui  PromotionChose.cpp  PromotionChose.h
ChessMate/ChessParser/: CMakeLists.txt  PgnParser.cpp  PgnParser.h
ChessMate/ChessPlayer/: CMakeLists.txt  IPlayer.cpp  IPlayer.h  PlayerHuman.cpp  PlayerHuman.h  PlayerSimpleAi.cpp  PlayerSimpleAi.h
Tests/: CMakeLists.txt  main.cpp
Tests/TestChessEngine/: TestBoard.cpp
Tests/TestParser/: TestPgnParser.cpp
data/an_examples/: an_draw.txt  an_white_is_checkmate.txt  an_white_resigns.txt
data/pgn_examples/: 10_games.pgn  black_checkmate.pgn  black_resign.pgn  draw.pgn  fools_mate_incomplete.pgn  promotion_with_chessmate_and_enpassant.pgn  white_checkmate.pgn  white_resign.pgn
doc/: CMakeLists.txt
doc/doxygen/: Doxyfile  footer.html
libs/: gtest.txt.in
